# vehicle-machine-learning

./: .gitignore  LICENSE  README.md  requirements.txt
misc/: NOTES.md  frames.gv  setup_ros_fresh.txt
src/csi_rover_arm_controls/: CMakeLists.txt  package.xml
src/csi_rover_arm_controls/scripts/: excavator_arm_controller.py  excavator_arm_mover.py
src/csi_rover_arm_controls/src/: rotate_excavator_arm_service.py
src/csi_rover_controls/: CMakeLists.txt  package.xml  setup.py
src/csi_rover_controls/config/: csi_rover_control.perspective
src/csi_rover_controls/deprecated/: coordinate_agent_DEPRECIATED.py  csi_rover_controller_topics.yaml  rover_motion_controller.py  rover_wheel_encoders.py  simple.perspective  simple_rover_controller.py
src/csi_rover_controls/launch/: csi_rover_controls.launch
src/csi_rover_controls/scripts/: coordinate_agent.py
src/csi_rover_controls/src/: acceleration_service_node.cpp
src/csi_rover_controls/srv/: AccelerationService.srv
src/csi_rover_description/launch/: csi_rover.launch  csi_rover_no_urdf.launch
src/csi_rover_description/urdf/: csi_rover.gazebo
src/csi_rover_gazebo/: README.md
src/csi_rover_gazebo/launch/: csi_rover.launch  csi_rover_rviz.launch
src/csi_rover_gazebo/rviz/: basic_rviz_config.rviz
src/csi_rover_gazebo/worlds/: apollo_15.world  flat_world_1.world  sample_world_1.world
src/csi_rover_launcher/: CMakeLists.txt  README.md  package.xml
src/csi_rover_launcher/launch/: launch_csi_rover.launch  launch_csi_rover_rviz.launch  qual_round_1.launch  qual_round_2.launch  qual_round_3.launch
src/csi_rover_launcher/scripts/: launch_sim.bash  startup_node.py
src/csi_rover_localizer/: CMakeLists.txt  NOTES.md  README.md  package.xml  setup.py
src/csi_rover_localizer/deprecated/: imu_rectifier  lidar_proc.py  rover_wheel_odometry.py
src/csi_rover_localizer/launch/: laser_odom.launch  lidar_proc.launch  localizer.launch  rtabmap.launch  visual_odom.launch
src/csi_rover_localizer/srv/: TargetCoordinate.srv
src/csi_rover_localizer/test_scripts/: rover_localization_gt.py  set_rover_init_pose.py
src/csi_rover_move_base/: CMakeLists.txt  csi_rover_rotate_recovery.xml  notes.txt  package.xml
src/csi_rover_move_base/cfg/: MoveBase.cfg
src/csi_rover_move_base/launch/: move_base.launch
src/csi_rover_move_base/scripts/: goal_publisher.py
src/csi_rover_move_base/src/: csi_rover_move_base.cpp  (+2 more)
src/csi_rover_navigation/: CMakeLists.txt  package.xml
src/csi_rover_obstacle_avoidance/: CMakeLists.txt  ReadMe.md  package.xml  setup.py
src/csi_rover_sensors/: CMakeLists.txt  package.xml
src/csi_rover_sensors/config/: rover_sensors_config.yaml
src/csi_rover_sensors/include/csi_rover_sensors/: IMURectifier.hpp  ImageRectifier.hpp  LaserScanRectifier.hpp
src/csi_rover_sensors/launch/: csi_rover_sensors.launch
src/csi_rover_sensors/nodes/: volatile_score_node.py
src/csi_rover_sensors/src/: IMURectifier.cpp  ImageRectifier.cpp  LaserScanRectifier.cpp  csi_rover_sensors_node.cpp
src/csi_rover_vision/: CMakeLists.txt  README.md  package.xml
src/csi_rover_watchdog/: CMakeLists.txt  ReadMe.md  package.xml
src/csi_rover_wavefront/: CMakeLists.txt  ReadMe.md  package.xml
src/diagnostics/: CMakeLists.txt  package.xml
src/four_wheel_steering_controller/: CMakeLists.txt  README.md  package.xml
src/four_wheel_steering_controller/config/: four_wheel_steering_controller_4ws_cmd.yaml
src/four_wheel_steering_controller/include/four_wheel_steering_controller/: four_wheel_steering_controller.h  gather_to_file.h  odometry.h
src/four_wheel_steering_controller/launch/: four_wheel_steering.launch  view_four_wheel_steering.launch
src/four_wheel_steering_controller/src/: four_wheel_steering_controller.cpp  gather_to_file.cpp  odometry.cpp  ros_controller_main.cpp
src/stereo_image_proc/: CMakeLists.txt
terrain_files/: rough_terrain.dae  terrain
tools/: create_world.py
(+57 files in other folders)
